added: swagger for lists
