# internal/transport/rest/board.go
@@ -2,6 +2,7 @@ package rest
 
 import (
 	"errors"
+	"fmt"
 	"net/http"
 	"strconv"
 
@@ -15,6 +16,18 @@ type boardInput struct {
 	Background string `json:"background,omitempty"`
 }
 
+// @Summary Create board
+// @Tags board
+// @Description create board
+// @ID create-board
+// @Accept  json
+// @Produce  json
+// @Param input body boardInput true "credentials"
+// @Param workspaceId path string true "Workspace ID"
+// @Param Authorization header string true "With the bearer started" default(Bearer <Add access token here>)
+// @Success 200 {object} postBody
+// @Failure default {object} webjson.errorResponse
+// @Router /api/workspaces/{workspaceId}/boards [post]
 func (h *Handler) createBoard(w http.ResponseWriter, r *http.Request) {
 	defaultLists := []string{"To Do", "Doing", "Finished"}
 	var input boardInput
@@ -24,6 +37,7 @@ func (h *Handler) createBoard(w http.ResponseWriter, r *http.Request) {
 		webjson.JSONError(w, errs.WebFail(http.StatusNotFound), http.StatusNotFound)
 		return
 	}
+	fmt.Println(workspaceId)
 	userId := r.Context().Value("id").(int)
 	boardId, err := h.service.Board.Create(input.Title, input.Background, userId, workspaceId)
 	if err != nil {
@@ -46,6 +60,18 @@ func (h *Handler) createBoard(w http.ResponseWriter, r *http.Request) {
 	webjson.SendJSON(w, postBody{boardId})
 }
 
+// @Summary Get board by id
+// @Tags board
+// @Description get board
+// @ID get-board
+// @Accept  json
+// @Produce  json
+// @Param workspaceId path string true "Workspace ID"
+// @Param id path string true "Board ID"
+// @Param Authorization header string true "With the bearer started" default(Bearer <Add access token here>)
+// @Success 200 {object} entity.Board
+// @Failure default {object} webjson.errorResponse
+// @Router /api/workspaces/{workspaceId}/boards/{id} [get]
 func (h *Handler) getBoardById(w http.ResponseWriter, r *http.Request) {
 	workspaceId, err := strconv.Atoi(mux.Vars(r)["workspaceId"])
 	if err != nil {
@@ -71,6 +97,17 @@ func (h *Handler) getBoardById(w http.ResponseWriter, r *http.Request) {
 	webjson.SendJSON(w, board)
 }
 
+// @Summary Get boards by workspace id
+// @Tags board
+// @Description get boards
+// @ID get-boards
+// @Accept  json
+// @Produce  json
+// @Param workspaceId path string true "Workspace ID"
+// @Param Authorization header string true "With the bearer started" default(Bearer <Add access token here>)
+// @Success 200 {array} entity.Board
+// @Failure default {object} webjson.errorResponse
+// @Router /api/workspaces/{workspaceId}/boards [get]
 func (h *Handler) getBoardByWorkspaceId(w http.ResponseWriter, r *http.Request) {
 	workspaceId, err := strconv.Atoi(mux.Vars(r)["workspaceId"])
 	if err != nil {
@@ -81,7 +118,7 @@ func (h *Handler) getBoardByWorkspaceId(w http.ResponseWriter, r *http.Request) 
 	boards, err := h.service.Board.GetByWorkspaceId(userId, workspaceId)
 	if err != nil {
 		h.logger.Err.Println(err)
-		if errors.Is(err, errs.ErrInvalidWorkspace) {
+		if errors.Is(err, errs.ErrInvalidWorkspace) || errors.Is(err, errs.ErrForeignKeyFailed) {
 			webjson.JSONError(w, err, http.StatusBadRequest)
 			return
 		}
@@ -91,6 +128,18 @@ func (h *Handler) getBoardByWorkspaceId(w http.ResponseWriter, r *http.Request) 
 	webjson.SendJSON(w, boards)
 }
 
+// @Summary Delete board by id
+// @Tags board
+// @Description delete board
+// @ID delete-board
+// @Accept  json
+// @Produce  json
+// @Param workspaceId path string true "Workspace ID"
+// @Param id path string true "Board ID"
+// @Param Authorization header string true "With the bearer started" default(Bearer <Add access token here>)
+// @Success 200 {object} postBody
+// @Failure default {object} webjson.errorResponse
+// @Router /api/workspaces/{workspaceId}/boards/{id} [delete]
 func (h *Handler) deleteBoardById(w http.ResponseWriter, r *http.Request) {
 	workspaceId, err := strconv.Atoi(mux.Vars(r)["workspaceId"])
 	if err != nil {
@@ -106,7 +155,7 @@ func (h *Handler) deleteBoardById(w http.ResponseWriter, r *http.Request) {
 	boardId, err = h.service.Board.DeleteById(userId, workspaceId, boardId)
 	if err != nil {
 		h.logger.Err.Println(err)
-		if errors.Is(err, errs.ErrInvalidBoard) || errors.Is(err, errs.ErrInvalidWorkspace) {
+		if errors.Is(err, errs.ErrInvalidBoard) || errors.Is(err, errs.ErrInvalidWorkspace) || errors.Is(err, errs.ErrForeignKeyFailed) {
 			webjson.JSONError(w, err, http.StatusBadRequest)
 			return
 		}
